<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayoutParent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTituloAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingBottom="16dp"
        android:text="@string/tabla_imc"
        android:textAlignment="center"
        android:textColor="@color/normal"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvD1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:backgroundTint="@color/delgadez_severa" />

        <TextView
            android:id="@+id/tvDSev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"

            android:text="@string/delgadez_severa"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvD2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:backgroundTint="@color/delgadez_moderada" />

        <TextView
            android:id="@+id/tvDMod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:text="@string/delgadez_moderada"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvD3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:backgroundTint="@color/delgadez_leve" />

        <TextView
            android:id="@+id/tvDLev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:text="@string/delgadez_leve"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvD4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:backgroundTint="@color/normal" />

        <TextView
            android:id="@+id/tvN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:text="@string/normal"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvD5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:backgroundTint="@color/preobesidad" />

        <TextView
            android:id="@+id/tvDPOb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:text="@string/preobesidad"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvD6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:backgroundTint="@color/obesidad_leve" />

        <TextView
            android:id="@+id/tvOLev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:text="@string/obesidad_leve"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvD7"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:backgroundTint="@color/obesidad_media" />

        <TextView
            android:id="@+id/tvOMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:text="@string/obesidad_media"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvD8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:backgroundTint="@color/obesidad_morbida" />

        <TextView
            android:id="@+id/tvDS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:text="@string/obesidad_morbida"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>